force-app/main/default/objects/AH_Dependent_Picklists_by_Object__mdt/AH_Dependent_Picklists_by_Object__mdt.object-meta.xml
<CustomObject>
    <description>NICC-046278

Referenced in the Support Case Lightning Flow</description>
    <label>AH Dependent Picklists by Object</label>
    <pluralLabel>AH Dependent Picklists by Objects</pluralLabel>
</CustomObject>