force-app/main/default/objects/AH_Dependent_Picklists_by_Object__mdt/fields/Controlling_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field_API_Name__c</fullName>
    <label>Controlling Field API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>