force-app/main/default/objects/AH_Dependent_Picklists_by_Object__mdt/fields/Object_Name_for_Dependent_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_for_Dependent_Field__c</fullName>
    <label>Object Name for Dependent Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>